# dragonblocks_alpha

./: .gitignore  .gitmodules  BUILDING.md  Makefile  README.md  array.c  binsearch.c  binsearch.h  client.c  client.h  client.sh  client_commands.h  clientcommands.c  dragonblocks.sh  linkedlist.c  linkedlist.h  map.c  map.h  meson.build  meson.options  network.c  network.h  node.h  release.sh  server.c  server.h  server_command_handlers.c  server_command_handlers.h  server_commands.h  servercommands.c  servercommands.h  signal.c  signal.h  singleplayer.bat  singleplayer.sh  snapshot.sh  types.c  types.h  upload.sh  util.c  (+1 more)
.github/workflows/: build.yml  snapshot.yml
GL/: gl.h
assets/meshes/: shovel.gox
assets/models/: player.txt
assets/schematics/: spawn_hut.txt
assets/shaders/3d/entity/: vertex.glsl
assets/shaders/3d/selection/: fragment.glsl  vertex.glsl
assets/shaders/3d/terrain/: fragment.glsl  vertex.glsl
assets/shaders/gui/background/: fragment.glsl
assets/shaders/gui/image/: vertex.glsl
assets/shaders/gui/mesh/: fragment.glsl  vertex.glsl
assets/shaders/shadow/: vertex.glsl
assets/shaders/sky/skybox/: fragment.glsl
meshes/: axe.gox  axe.txt  pickaxe.gox  pickaxe.txt  shovel.txt  unknown.gox  unknown.txt
misc/: debug_loop.sh  dragonblocks_alpha.desktop  snapshot.sh  upload.sh
misc/archlinux/: PKGBUILD
models/: player.txt
schematics/: spawn_hut.gox
shaders/: fragment.glsl  vertex.glsl
shaders/3d/: fragment.glsl  vertex.glsl
shaders/3d/entity/: fragment.glsl  vertex.glsl
shaders/3d/item/: fragment.glsl  vertex.glsl
shaders/3d/terrain/: fragment.glsl  vertex.glsl
shaders/gui/background/: vertex.glsl
shaders/gui/font/: fragment.glsl  vertex.glsl
shaders/gui/image/: fragment.glsl
shaders/hud/font/: fragment.glsl  vertex.glsl
shaders/hud/image/: fragment.glsl  vertex.glsl
shaders/sky/clouds/: fragment.glsl  vertex.glsl
shaders/sky/skybox/: fragment.glsl  vertex.glsl
shaders/sky/sun/: fragment.glsl  vertex.glsl
shaders/terrain/: fragment.glsl  vertex.glsl
src/: CMakeLists.txt  Makefile  array.c  array.h  binsearch.c  bintree.c  bintree.h  biome.c  biome.h  blockmesh.c  blockmesh.h  camera.c  camera.h  client.c  client.h  clientcommands.c  clientcommands.h  clientmap.c  clientmap.h  clientnode.c  clientnode.h  clientplayer.c  clientplayer.h  color.c  color.h  config.c  config.h  cube.c  cube.h  day.c  day.h  debug.sh  debug_loop.sh  debug_mapgen.sh  debug_terrain.sh  dig.h  environment.c  environment.h  facecache.c  facecache.h  (+61 more)
src/client/: action.c  action.h  blockmesh.c  blockmesh.h  camera.c  camera.h  client.c  client.h  client_auth.c  client_auth.h  client_commands.c  client_commands.h  client_config.c  client_config.h  client_entity.c  client_entity.h  client_inventory.c  client_inventory.h  client_item.c  client_item.h  client_map.c  client_map.h  client_node.c  client_node.h  client_player.c  client_player.h  client_terrain.c  client_terrain.h  cube.c  cube.h  debug_menu.c  debug_menu.h  facecache.c  facecache.h  facedir.c  font.c  font.h  frustum.c  frustum.h  game.c  (+41 more)
src/common/: color.c  color.h  config.c  config.h  day.c  dig.h  entity.h  environment.c  facedir.c  fs.c  fs.h  init.c  init.h  interrupt.c  interrupt.h  inventory.h  item.c  item.h  node.c  node.h  perlin.c  perlin.h  physics.c  physics.h  terrain.c  terrain.h
src/server/: biomes.c  biomes.h  database.c  database.h  facecache.c  facecache.h  mapdb.c  mapdb.h  mapgen.c  mapgen.h  perlin.c  schematic.c  schematic.h  server.c  server.h  server_commands.c  server_commands.h  server_config.c  server_config.h  server_item.c  server_item.h  server_map.c  server_map.h  server_node.c  server_node.h  server_player.c  server_player.h  server_terrain.c  server_terrain.h  terrain_gen.c  terrain_gen.h  tree.c  tree.h  tree_physics.c  tree_physics.h  trees.c  trees.h  voxel_depth_search.c  voxel_depth_search.h  voxel_procedural.c  (+3 more)
subprojects/: asprintf.wrap  dragonnet.wrap  dragonstd.wrap  endian.wrap  getline.wrap  linenoise.wrap  linmath.wrap  perlin.wrap  protogen.wrap  stb.wrap
subprojects/packagefiles/endian/: meson.build
subprojects/packagefiles/linenoise/: meson.build
subprojects/packagefiles/linmath/: meson.build
subprojects/packagefiles/perlin/: meson.build
subprojects/packagefiles/protogen/: meson.build
subprojects/packagefiles/stb/: meson.build
tools/: debug.sh  debug_loop.sh  snapshot.sh  upload.sh
tools/archlinux/: PKGBUILD
